# DATN

./: .gitignore  prompt_methodology.md
baselines/: README.md  pyproject.toml  run_30runs.py  run_sweep.sh  setup_gpu_torch.ps1  stats_analysis.py  train.py
baselines/agents/: __init__.py  lagrangian.py  manager_agent.py  ppo_agent.py  ppo_core.py  sac_agent.py  td3_agent.py  worker_agent.py
baselines/audit/: closure_checks.py  dry_run.py  eval_tail_bank.py  feasibility_eval.py  feasibility_oracle.py  feasibility_sweep.py  pretrain_audit_manifest.json  runtime_oracle.py
baselines/env/: __init__.py  aoi_tracker.py  bystander_traffic.py  channel_model.py  oran_env.py  queue_model.py  sumo_mobility.py  traffic_gen.py
baselines/experiments/: __init__.py  exp8_aoi.py
baselines/scripts/: audit_gate3.py  run_sweep.sh
baselines/solvers/: __init__.py  _common.py  b2_hrl_ppo_soft.py  no_phase_ppo.py  pa_ppo_soft.py  ppo_cmdp_flat.py  sac.py  smoke_train.py  static_slicing.py  td3.py  train_offpolicy.py  train_sac.py  train_td3.py
baselines/tests/: audit_q1_feasibility.py  audit_q1_q9_full.py  test_active_arrived_mask.py  test_agents_ppo.py  test_aoi_receiver_side.py  test_arrival_dest_separation.py  test_c2c5_tail_estimator.py  test_constraint_active_normalization.py  test_d1_d7_formulation.py  test_delay_aoi_caps.py  test_density_sweep_pipeline.py  test_early_termination.py  test_env_c3.py  test_env_e1_e5.py  test_env_hard.py  test_env_invariants_exact.py  test_env_phase2.py  test_env_severity_k.py  test_env_week2.py  test_env_week3.py  test_env_week4.py  (+36 more)
(+246 files in other folders)
